# memory

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  covers.cfg  sets.cfg  settings.cfg
include/: card.h  deck.h
src/: card.c  card.h  deck.c  deck.h  memory.c  memory.h  settings.c  settings.h
vs/: memory.sln
vs/memory/: memory.vcxproj  memory.vcxproj.filters
